@@ -54,7 +54,7 @@ PKG_CHECK_MODULES(GEDIT, [
 	gedit-2.20 >= 2.20.0
 	libglade-2.0 >= 2.4.0
 	gnome-vfs-2.0 >= 2.13.4
-	gtksourcecompletion-1.0 >= 0.6.0
+	gtksourcecompletion-2.0 >= 0.7.0
 	gconf-2.0
 ])
 GEDIT_LIBS="${GEDIT_LIBS}"
