@@ -5,7 +5,7 @@ INCLUDES = \
 	$(GEDIT_CFLAGS) 						\
 	$(WARN_CFLAGS)							\
 	$(DISABLE_DEPRECATED_CFLAGS)					\
-	`pkg-config --cflags gtksourcecompletion-1.0`			\
+	`pkg-config --cflags gtksourcecompletion-2.0`			\
 	`pkg-config --cflags gconf-2.0`					\
 	-DGEDIT_LOCALEDIR=\""$(prefix)/$(DATADIRNAME)/locale"\"
 
@@ -23,7 +23,7 @@ libsourcecompletion_la_SOURCES = \
 	sourcecompletion-plugin.h	\
 	sourcecompletion-plugin.c
 
-libsourcecompletion_la_LDFLAGS = $(PLUGIN_LIBTOOL_FLAGS) `pkg-config --libs gtksourcecompletion-1.0` `pkg-config --libs gconf-2.0`
+libsourcecompletion_la_LDFLAGS = $(PLUGIN_LIBTOOL_FLAGS) `pkg-config --libs gtksourcecompletion-2.0` `pkg-config --libs gconf-2.0`
 
 # Glade files (if you use glade for your plugin, list those files here)
 gladedir = $(datadir)/gedit-2/glade
