@@ -27,12 +27,15 @@ struct _GscProposalCsymbolPrivate
 G_DEFINE_TYPE(GscProposalCsymbol, gsc_proposal_csymbol, GSC_TYPE_PROPOSAL);
 
 #define GSC_PROPOSAL_CSYMBOL_GET_PRIVATE(object)(G_TYPE_INSTANCE_GET_PRIVATE ((object), GSC_TYPE_PROPOSAL_CSYMBOL, GscProposalCsymbolPrivate))
+
+/*FIXME Poner global porque se usa también en proposal-symgoto*/
+#define INFO_TMPL "<b>File:</b> %s\n<b>Type:</b> %s\n<b>Line:</b> %d"
  
 static gboolean
 gsc_proposal_csymbol_apply(GscProposal* proposal, GtkTextView *view)
 {
 	/*Do the work when the user selects this proposal*/
-	return TRUE;
+	return GSC_PROPOSAL_CLASS (gsc_proposal_csymbol_parent_class)->apply (proposal, view);
 }
 
 static void
@@ -58,14 +61,22 @@ gsc_proposal_csymbol_init (GscProposalCsymbol *self)
 }
 
 GscProposal*
-gsc_proposal_csymbol_new (const gchar *label,
-				      const gchar *info,
-				      GdkPixbuf *icon)
+gsc_proposal_csymbol_new (GeditWindow *window,
+			  Symbol *symbol)
 {
+	gchar		*info;
+	
+	g_return_val_if_fail (symbol != NULL, NULL);
+	
+	info = g_strdup_printf (INFO_TMPL, 
+				symbol->file,
+				symbol->type,
+				symbol->line);
+	
 	GscProposalCsymbol *self = GSC_PROPOSAL_CSYMBOL (g_object_new (GSC_TYPE_PROPOSAL_CSYMBOL, 
-								 "label", label,
+								 "label", symbol->name,
 								 "info", info,
-								 "icon", icon,
+								 "icon", NULL,
 								 NULL));
 	return GSC_PROPOSAL (self);
 }
